--- a/host/package.json
+++ b/host/package.json
@@ -20,7 +20,12 @@
     "prepare": "husky install",
     "type-check": "tsc",
     "start:web:local": "webpack serve --mode production --config webpack.local.config.js --port 9001",
-    "build:web:local": "webpack --mode production --config webpack.local.config.js"
+    "build:spa": "webpack --config webpack.spa.config.js",
+    "build:spa:watch": "webpack --config webpack.spa.config.js --watch",
+    "iso:start": "webpack-cli serve --config webpack.isolated.config.js",
+    "iso:build": "webpack --mode production --config webpack.isolated.config.js",
+    "iso:build:watch": "webpack --mode production --config webpack.isolated.config.js --watch"
+
   },
   "keywords": [
     "react",
@@ -51,6 +56,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
+    "dotenv": "^16.4.5",
     "dotenv-webpack": "^8.0.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.0.0",
