--- a/remote/package.json
+++ b/remote/package.json
@@ -31,7 +31,10 @@
     "stylelint": "stylelint src/**/*.{css,less,scss,sass} --fix",
     "prepare": "husky install",
     "type-check": "tsc",
-    "start:hr": "webpack serve --mode production --config webpack-live.config.js --port 9002"
+    "start:hr": "webpack serve --mode production --config webpack-live.config.js --port 9002",
+    "build:mfe": "webpack --mode production --config webpack.mfe.config.js",
+    "iso:start": "webpack-cli serve --config webpack.isolated.config.js",
+    "iso:build": "webpack --mode production --config webpack.isolated.config.js"
   },
   "keywords": [
     "react",
@@ -63,6 +66,8 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
+    "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.1.0",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
@@ -91,7 +96,7 @@
     "webpack-livereload-plugin": "^3.0.2"
   },
   "dependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "peerDependencies": {
