--- a/host/package.json
+++ b/host/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-module-federation-mfe-host",
+  "name": "react-module-federation-host",
   "version": "0.0.0",
   "description": "React typescript component creator boilerplate using webpack, react and typescript",
   "main": "dist/index.js",
@@ -7,25 +7,14 @@
   "unpkg": "dist/index.min.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development --hot",
-    "build:website": "webpack --mode production",
-    "build:lib": "npm run build:types && npm run compile",
-    "build:types": "tsc --emitDeclarationOnly",
-    "compile": "babel src --out-dir lib --extensions \".js,.jsx,.ts,.tsx\" --source-maps inline",
-    "bundle": "webpack --config webpack.lib.config.js",
-    "bundle:prod": "webpack --mode production --config webpack.lib.config.js",
+    "start": "webpack-cli serve",
+    "build": "webpack --mode production",
+    "build:watch": "webpack --mode production --watch",
     "eslint": "eslint . --ext .js,.cjs,.ts,.jsx,.tsx, --quiet --fix --ignore-path ./.gitignore",
     "prettier": "prettier --config .prettierrc --write 'src/**/*.{js,jsx,ts,tsx,css,html,json}' ",
     "stylelint": "stylelint src/**/*.{css,less,scss,sass} --fix ",
     "prepare": "husky install",
-    "type-check": "tsc",
-    "start:web:local": "webpack serve --mode production --config webpack.local.config.js --port 9001",
-    "build:spa": "webpack --config webpack.spa.config.js",
-    "build:spa:watch": "webpack --config webpack.spa.config.js --watch",
-    "iso:start": "webpack-cli serve --config webpack.isolated.config.js",
-    "iso:build": "webpack --mode production --config webpack.isolated.config.js",
-    "iso:build:watch": "webpack --mode production --config webpack.isolated.config.js --watch"
-
+    "type-check": "tsc"
   },
   "keywords": [
     "react",
@@ -54,7 +43,6 @@
     "@typescript-eslint/parser": "^6.4.1",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "dotenv": "^16.4.5",
     "dotenv-webpack": "^8.0.1",
@@ -66,7 +54,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "external-remotes-plugin": "^1.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.3",
@@ -81,10 +68,8 @@
     "stylelint-config-sass-guidelines": "^11.1.0",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
-    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-livereload-plugin": "^3.0.2"
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "react": "^18.2.0",
