--- a/remote/package.json
+++ b/remote/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-typescript-react-library-template",
+  "name": "react-module-federation-remote",
   "version": "0.0.0",
   "description": "React typescript component creator boilerplate using webpack, react and typescript",
   "main": "dist/index.js",
@@ -19,22 +19,13 @@
     "registry": "https://registry.npmjs.org/"
   },
   "scripts": {
-    "start": "webpack-dev-server --open --mode development --hot",
-    "build:website": "webpack --mode production",
-    "build:lib": "npm run build:types && npm run compile",
-    "build:types": "tsc --emitDeclarationOnly",
-    "compile": "babel src --out-dir lib --extensions \".js,.jsx,.ts,.tsx\" --source-maps inline",
-    "bundle": "webpack --config webpack.lib.config.js",
-    "bundle:prod": "webpack --mode production --config webpack.lib.config.js",
+    "start": "webpack-cli serve",
+    "build": "webpack --mode production",
     "eslint": "eslint . --ext .js,.cjs,.ts,.jsx,.tsx, --quiet --fix --ignore-path ./.gitignore",
     "prettier": "prettier --config .prettierrc --write 'src/**/*.{js,jsx,ts,tsx,css,html,json}' ",
     "stylelint": "stylelint src/**/*.{css,less,scss,sass} --fix",
     "prepare": "husky install",
-    "type-check": "tsc",
-    "start:hr": "webpack serve --mode production --config webpack-live.config.js --port 9002",
-    "build:mfe": "webpack --mode production --config webpack.mfe.config.js",
-    "iso:start": "webpack-cli serve --config webpack.isolated.config.js",
-    "iso:build": "webpack --mode production --config webpack.isolated.config.js"
+    "type-check": "tsc"
   },
   "keywords": [
     "react",
@@ -47,7 +38,7 @@
     "src",
     "tsconfig.json"
   ],
-  "author": "Kothing",
+  "author": "ahelord",
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.22.10",
@@ -57,14 +48,12 @@
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.11",
     "@babel/runtime": "^7.22.11",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "dotenv": "^16.4.5",
     "dotenv-webpack": "^8.1.0",
@@ -76,7 +65,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "external-remotes-plugin": "^1.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.3",
@@ -90,17 +78,15 @@
     "stylelint-config-recommended": "^14.0.0",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
-    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-livereload-plugin": "^3.0.2"
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "react": "^18.2.0"
   },
   "lint-staged": {
     "./**/*.{js,cjs,ts,jsx,tsx}": [
